--- a/pages/cartInfo-admin/rubbish/rubbish.wxss
+++ b/pages/cartInfo-admin/rubbish/rubbish.wxss
@@ -1,1 +1,84 @@
 /* pages/cartInfo-admin/rubbish/rubbish.wxss */
+.title {
+  font-size: 30px;
+  margin: 20px;
+  margin-bottom: 40px;
+}
+
+.content {
+  width: 100%;
+  border-radius: 30px 30px 0 0;
+  /* margin-top: -30px; */
+  background: white;
+  box-shadow: 0 -14rpx 10rpx rgba(0, 0, 0, 0.2);
+  z-index: 999;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.gray-line {
+  margin: 12px 44%;
+  background: #909399;
+  height: 6px;
+  border-radius: 3px;
+}
+
+.content-title {
+  font-size: 25px;
+  color: #303133;
+  margin: 10px 20px;
+  margin-bottom: 0;
+  font-weight: 600;
+}
+
+.content-list-title {
+  margin-left: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #606266;
+}
+
+.content-state {
+  margin-left: 20px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  color: #777777;
+}
+
+.content-item {
+  display: flex;
+  margin: 10px 20px;
+  height: 40px;
+}
+
+.content-item-name {
+  display: flex;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.content-item-name view {
+  margin-left: 50px;
+  line-height: 40px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.content-item-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.content-item-num {
+  line-height: 40px;
+}
+
+.btn-body {
+  text-align: center;
+  margin-top: 50px;
+  width: 80%;
+  margin: 50px auto;
+  padding: 10px;
+  border: 2px solid #909399;
+  border-radius: 10px;
+}
